20140920 data: add fuse.desktop and fuse.xml to the ignore property (Sergio).
20141109 configure.ac: prefer GTK+ 3 to GTK+ 2 (Sergio).
20141230 fuse.c: abort start if we can't drop root priveleges (thanks, clang
         static analyser) (Fred).
20141230 peripherals/disk/disk.c: avoid passing null argument to strcasecmp() if
         filename is less than 4 characters in disk_write() (thanks, clang
         static analyser) (Fred).
20150104 debugger/disassemble.c: remove redundant code (Sergio).
20150106 debugger/breakpoint.c,peripherals/disk/disk.c: avoid the use of memory
         after it is freed (thanks, clang static analyser) (Sergio).
20150107 ui/scaler/scalers.c: remove unused code (thanks, clang static analyser)
         (Sergio).
20150221 hacking/peripheral_tests.txt: add a couple of implicit steps (Fred).
20150301 machines/specplus3.c,peripherals/disk/{beta.c,disciple.c,disk.h,
         fdd.[ch],opus.c,plusd.c,upd_fdc.[ch],wd_fdc.[ch]},ui/uimedia.h,
         uimedia.c: migrate "index event" handling to the FDD layer and have FDC
         layer use it for their STATUS registers (fixes bug #311) (Gergely
         Szasz).
20150301 hacking/peripheral_tests.txt: fix details for Disciple test (Fred).
20150302 compat/win32/socket.c,compat.h,menu_data.pl,ui/{gtk/{confirm.c,
         debugger.c,gtkjoystick.c,gtkui.c,pokefinder.c,stock.c},widget/query.c,
         win32/win32ui.c}: add and use ARRAY_SIZE macro (Stuart).
20150302 display.c,event.c,machine.c,memory.c,periph.c,rectangle.c,sound.c: use
         libspectrum_{new,new0,renew}() macros where sizeof(elem) > 1 (Stuart).
20150302 fuse.c,memory.c,peripherals/disk/disk.c,rzx.c,settings.pl,slt.c,tape.c,
         ui/widget/text.c,utils.c: use libspectrum_{new,new0,renew}() macros
         where sizeof(elem) == 1 (Stuart).
20150303 debugger/{commandy.y,expression.c},mempool.[ch],unittests/unittests.c:
         rename mempool_alloc() to mempool_malloc() to match libspectrum and
         GLib (Stuart).